[tool.poetry]
name = "shoe-labler"
version = "0.1.0"
description = ""
authors = ["changhyeonnam <hj04143@gmail.com>"]
readme = "README.md"
packages = [{include = "shoe_labler"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
glob2 = "^0.7"
Pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
